--- a/delicious.cabal
+++ b/delicious.cabal
@@ -28,7 +28,7 @@ Library
       Network.Delicious
 
 
-    Build-depends:   base,
+    Build-depends:   base >= 3 && < 5,
                      xml        >= 1.2.6,
                      feed       >= 0.3.9.2,
                      curl       >= 1.1,
